[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/module/module.gd" type="Script" id=1]
[ext_resource path="res://addons/module/createModuleDialog.gd" type="Script" id=2]
[ext_resource path="res://addons/module/createFolderIcon_white.svg" type="Texture" id=3]
[ext_resource path="res://addons/module/interfaceDialog.gd" type="Script" id=4]

[sub_resource type="Image" id=3]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 3 )
size = Vector2( 16, 16 )

[node name="module" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 22.0
alignment = 2

[node name="moduleDirLabel" type="Label" parent="hbox"]
margin_top = 4.0
margin_right = 896.0
margin_bottom = 18.0
size_flags_horizontal = 3

[node name="moduleDirBtn" type="Button" parent="hbox"]
margin_left = 900.0
margin_right = 928.0
margin_bottom = 22.0
icon = SubResource( 2 )
flat = true
__meta__ = {
"_editor_description_": ""
}

[node name="createBtn" type="Button" parent="hbox"]
margin_left = 932.0
margin_right = 960.0
margin_bottom = 22.0
icon = SubResource( 2 )
flat = true

[node name="createFolderBtn" type="Button" parent="hbox"]
margin_left = 964.0
margin_right = 992.0
margin_bottom = 22.0
icon = ExtResource( 3 )
flat = true

[node name="updateBtn" type="Button" parent="hbox"]
margin_left = 996.0
margin_right = 1024.0
margin_bottom = 22.0
icon = SubResource( 2 )
flat = true
__meta__ = {
"_editor_description_": ""
}

[node name="tableTree" type="Tree" parent="."]
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
allow_reselect = true
hide_root = true

[node name="createModuleDialog" type="WindowDialog" parent="tableTree"]
margin_top = 384.0
margin_right = 600.0
margin_bottom = 574.0
rect_min_size = Vector2( 600, 190 )
window_title = "Create Module"
script = ExtResource( 2 )

[node name="vbox" type="VBoxContainer" parent="tableTree/createModuleDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="filenameHbox" type="HBoxContainer" parent="tableTree/createModuleDialog/vbox"]
margin_right = 584.0
margin_bottom = 24.0

[node name="filenameLabel" type="Label" parent="tableTree/createModuleDialog/vbox/filenameHbox"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Filename"

[node name="filenameEdit" type="LineEdit" parent="tableTree/createModuleDialog/vbox/filenameHbox"]
margin_left = 104.0
margin_right = 584.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="nameHbox" type="HBoxContainer" parent="tableTree/createModuleDialog/vbox"]
margin_top = 28.0
margin_right = 584.0
margin_bottom = 52.0

[node name="nameLabel" type="Label" parent="tableTree/createModuleDialog/vbox/nameHbox"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Name"

[node name="nameEdit" type="LineEdit" parent="tableTree/createModuleDialog/vbox/nameHbox"]
margin_left = 104.0
margin_right = 584.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="descHbox" type="HBoxContainer" parent="tableTree/createModuleDialog/vbox"]
margin_top = 56.0
margin_right = 584.0
margin_bottom = 80.0

[node name="descLabel" type="Label" parent="tableTree/createModuleDialog/vbox/descHbox"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Description"

[node name="descEdit" type="LineEdit" parent="tableTree/createModuleDialog/vbox/descHbox"]
margin_left = 104.0
margin_right = 584.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="versionHbox" type="HBoxContainer" parent="tableTree/createModuleDialog/vbox"]
margin_top = 84.0
margin_right = 584.0
margin_bottom = 108.0

[node name="versionLabel" type="Label" parent="tableTree/createModuleDialog/vbox/versionHbox"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Version"

[node name="versionEdit" type="LineEdit" parent="tableTree/createModuleDialog/vbox/versionHbox"]
margin_left = 104.0
margin_right = 584.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "1.0.0"

[node name="gdPathHbox" type="HBoxContainer" parent="tableTree/createModuleDialog/vbox"]
margin_top = 112.0
margin_right = 584.0
margin_bottom = 136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gdPathLabel" type="Label" parent="tableTree/createModuleDialog/vbox/gdPathHbox"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "GD File Path"

[node name="gdPathEdit" type="LineEdit" parent="tableTree/createModuleDialog/vbox/gdPathHbox"]
margin_left = 104.0
margin_right = 552.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="gdPathBtn" type="Button" parent="tableTree/createModuleDialog/vbox/gdPathHbox"]
margin_left = 556.0
margin_right = 584.0
margin_bottom = 24.0
icon = SubResource( 2 )

[node name="FileDialog" type="FileDialog" parent="tableTree/createModuleDialog/vbox/gdPathHbox/gdPathBtn"]
margin_left = -564.0
margin_top = -530.0
margin_right = -164.0
margin_bottom = -230.0
rect_min_size = Vector2( 400, 300 )
popup_exclusive = true
window_title = "gd Script"
resizable = true
mode_overrides_title = false
mode = 0
filters = PoolStringArray( "*.gd ; Godot Script" )

[node name="btnsHbox" type="HBoxContainer" parent="tableTree/createModuleDialog/vbox"]
margin_top = 140.0
margin_right = 584.0
margin_bottom = 182.0
size_flags_vertical = 3
custom_constants/separation = 32
alignment = 1

[node name="okBtn" type="Button" parent="tableTree/createModuleDialog/vbox/btnsHbox"]
margin_left = 222.0
margin_top = 11.0
margin_right = 275.0
margin_bottom = 31.0
size_flags_vertical = 4
text = "Create"

[node name="cancelBtn" type="Button" parent="tableTree/createModuleDialog/vbox/btnsHbox"]
margin_left = 307.0
margin_top = 11.0
margin_right = 361.0
margin_bottom = 31.0
size_flags_vertical = 4
text = "Cancel"

[node name="moduleDirFileDialog" type="FileDialog" parent="tableTree"]
margin_top = 444.0
margin_right = 400.0
margin_bottom = 644.0
rect_min_size = Vector2( 400, 200 )
popup_exclusive = true
window_title = "Module Folder"
resizable = true
mode_overrides_title = false
mode = 2
show_hidden_files = true
__meta__ = {
"_editor_description_": ""
}

[node name="errorDialog" type="AcceptDialog" parent="tableTree"]
margin_top = -26.0
margin_right = 83.0
margin_bottom = 32.0
popup_exclusive = true
window_title = "Error"

[node name="interfaceDialog" type="WindowDialog" parent="tableTree"]
margin_right = 600.0
margin_bottom = 130.0
rect_min_size = Vector2( 600, 160 )
window_title = "Add Interface"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="tableTree/interfaceDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="interfaceHbox" type="HBoxContainer" parent="tableTree/interfaceDialog/vbox"]
margin_right = 584.0
margin_bottom = 24.0

[node name="interfaceLabel" type="Label" parent="tableTree/interfaceDialog/vbox/interfaceHbox"]
margin_top = 5.0
margin_right = 80.0
margin_bottom = 19.0
rect_min_size = Vector2( 80, 0 )
text = "Interface"

[node name="interfaceEdit" type="LineEdit" parent="tableTree/interfaceDialog/vbox/interfaceHbox"]
margin_left = 84.0
margin_right = 552.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="interfaceBtn" type="MenuButton" parent="tableTree/interfaceDialog/vbox/interfaceHbox"]
margin_left = 556.0
margin_right = 584.0
margin_bottom = 24.0
icon = SubResource( 2 )

[node name="lvHbox" type="HBoxContainer" parent="tableTree/interfaceDialog/vbox"]
margin_top = 28.0
margin_right = 584.0
margin_bottom = 52.0

[node name="lvLabel" type="Label" parent="tableTree/interfaceDialog/vbox/lvHbox"]
margin_top = 5.0
margin_right = 80.0
margin_bottom = 19.0
rect_min_size = Vector2( 80, 0 )
text = "level"

[node name="lvEdit" type="SpinBox" parent="tableTree/interfaceDialog/vbox/lvHbox"]
margin_left = 84.0
margin_right = 584.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -65536.0
max_value = 65536.0

[node name="priorityHbox" type="HBoxContainer" parent="tableTree/interfaceDialog/vbox"]
margin_top = 56.0
margin_right = 584.0
margin_bottom = 80.0

[node name="priorityLabel" type="Label" parent="tableTree/interfaceDialog/vbox/priorityHbox"]
margin_top = 5.0
margin_right = 80.0
margin_bottom = 19.0
rect_min_size = Vector2( 80, 0 )
text = "priority"

[node name="priorityEdit" type="SpinBox" parent="tableTree/interfaceDialog/vbox/priorityHbox"]
margin_left = 84.0
margin_right = 584.0
margin_bottom = 24.0
size_flags_horizontal = 3
min_value = -65536.0
max_value = 65536.0

[node name="methodHbox" type="HBoxContainer" parent="tableTree/interfaceDialog/vbox"]
margin_top = 84.0
margin_right = 584.0
margin_bottom = 108.0

[node name="methodLabel" type="Label" parent="tableTree/interfaceDialog/vbox/methodHbox"]
margin_top = 5.0
margin_right = 80.0
margin_bottom = 19.0
rect_min_size = Vector2( 80, 0 )
text = "method"

[node name="methodEdit" type="LineEdit" parent="tableTree/interfaceDialog/vbox/methodHbox"]
margin_left = 84.0
margin_right = 552.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="methodBtn" type="MenuButton" parent="tableTree/interfaceDialog/vbox/methodHbox"]
margin_left = 556.0
margin_right = 584.0
margin_bottom = 24.0
icon = SubResource( 2 )

[node name="btnsHbox" type="HBoxContainer" parent="tableTree/interfaceDialog/vbox"]
margin_top = 122.0
margin_right = 584.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_constants/separation = 32
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="okBtn" type="Button" parent="tableTree/interfaceDialog/vbox/btnsHbox"]
margin_left = 230.0
margin_right = 267.0
margin_bottom = 20.0
text = "Add"

[node name="cancelBtn" type="Button" parent="tableTree/interfaceDialog/vbox/btnsHbox"]
margin_left = 299.0
margin_right = 353.0
margin_bottom = 20.0
text = "Cancel"

[node name="confirmDialog" type="ConfirmationDialog" parent="tableTree"]
margin_top = -26.0
margin_right = 83.0
margin_bottom = 32.0
popup_exclusive = true
[connection signal="pressed" from="hbox/moduleDirBtn" to="." method="_on_moduleDirBtn_pressed"]
[connection signal="pressed" from="hbox/createBtn" to="." method="_on_createBtn_pressed"]
[connection signal="pressed" from="hbox/createFolderBtn" to="." method="_on_createFolderBtn_pressed"]
[connection signal="pressed" from="hbox/updateBtn" to="." method="_on_updateBtn_pressed"]
[connection signal="button_pressed" from="tableTree" to="." method="_on_tableTree_button_pressed"]
[connection signal="item_activated" from="tableTree" to="." method="_on_tableTree_item_activated"]
[connection signal="item_edited" from="tableTree" to="." method="_on_tableTree_item_edited"]
[connection signal="ok" from="tableTree/createModuleDialog" to="." method="_on_createModuleDialog_ok"]
[connection signal="pressed" from="tableTree/createModuleDialog/vbox/gdPathHbox/gdPathBtn" to="tableTree/createModuleDialog" method="_on_gdPathBtn_pressed"]
[connection signal="file_selected" from="tableTree/createModuleDialog/vbox/gdPathHbox/gdPathBtn/FileDialog" to="tableTree/createModuleDialog" method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="tableTree/createModuleDialog/vbox/btnsHbox/okBtn" to="tableTree/createModuleDialog" method="_on_createBtn_pressed"]
[connection signal="pressed" from="tableTree/createModuleDialog/vbox/btnsHbox/cancelBtn" to="tableTree/createModuleDialog" method="_on_cancelBtn_pressed"]
[connection signal="dir_selected" from="tableTree/moduleDirFileDialog" to="." method="_on_moduleDIrFileDialog_dir_selected"]
[connection signal="interface_menu_popup" from="tableTree/interfaceDialog" to="." method="_on_interfaceDialog_interface_menu_popup"]
[connection signal="method_menu_popup" from="tableTree/interfaceDialog" to="." method="_on_interfaceDialog_method_menu_popup"]
[connection signal="text_changed" from="tableTree/interfaceDialog/vbox/interfaceHbox/interfaceEdit" to="tableTree/interfaceDialog" method="_on_interfaceEdit_text_changed"]
[connection signal="about_to_show" from="tableTree/interfaceDialog/vbox/interfaceHbox/interfaceBtn" to="tableTree/interfaceDialog" method="_on_interfaceBtn_about_to_show"]
[connection signal="text_changed" from="tableTree/interfaceDialog/vbox/methodHbox/methodEdit" to="tableTree/interfaceDialog" method="_on_methodEdit_text_changed"]
[connection signal="about_to_show" from="tableTree/interfaceDialog/vbox/methodHbox/methodBtn" to="tableTree/interfaceDialog" method="_on_methodBtn_about_to_show"]
[connection signal="pressed" from="tableTree/interfaceDialog/vbox/btnsHbox/okBtn" to="tableTree/interfaceDialog" method="_on_okBtn_pressed"]
[connection signal="pressed" from="tableTree/interfaceDialog/vbox/btnsHbox/cancelBtn" to="tableTree/interfaceDialog" method="_on_cancelBtn_pressed"]
[connection signal="confirmed" from="tableTree/confirmDialog" to="." method="_on_confirmDialog_confirmed"]
